@@ -20,6 +20,7 @@ Generator::Map Generator::s_insert =
     {"debugFunctions",          &Generator::debugFunctions},
     {"declarations",            &Generator::declarations},
     {"inlineLexFunction",       &Generator::inlineLexFunction},
+    {"interactiveDecl",         &Generator::interactiveDecl},
     {"interactiveInit",         &Generator::interactiveInit},
     {"interactiveLex",          &Generator::interactiveLex},
     {"lexFunctionDecl",         &Generator::lexFunctionDecl},
