@@ -1,4 +1,4 @@
-// Generated by Flexc++ V1.02.00 on Sun, 25 Nov 2012 11:13:45 +0100
+// Generated by Flexc++ V1.03.02 on Thu, 14 Mar 2013 12:38:54 +0100
 
 #include <iostream>
 #include <fstream>
@@ -1770,7 +1770,7 @@ size_t ScannerBase::Input::next()
         if (d_in == 0)
             return AT_EOF;
         ch = d_in->get();
-        return *d_in ? ch : AT_EOF;
+        return *d_in ? ch : static_cast<size_t>(AT_EOF);
     }
 
     ch = d_deque.front();
