@@ -1,4 +1,4 @@
-// Generated by Flexc++ V1.02.00 on Sun, 25 Nov 2012 11:13:45 +0100
+// Generated by Flexc++ V1.03.02 on Thu, 14 Mar 2013 12:38:54 +0100
 
 #ifndef ScannerBASE_H_INCLUDED
 #define ScannerBASE_H_INCLUDED
@@ -186,6 +186,9 @@ public:
                                       std::string const &outfilename);
 
 
+// $insert interactiveDecl
+    bool                interactiveLine();
+
 protected:
     ScannerBase(std::istream &in, std::ostream &out);
     ScannerBase(std::string const &infilename, std::string const &outfilename);
@@ -226,7 +229,6 @@ protected:
         // otherwise.
 
     ActionType__    actionType__(size_t range); // next action
-    bool            interactiveLine__();        // refresh an interactive line
     bool            return__();                 // 'return' from codeblock
     size_t          matched__(size_t ch);       // handles a matched rule
     size_t          getRange__(int ch);         // convert char to range
